kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ch-gov-uk
spec:
  selector:
    matchLabels:
      app: ch-gov-uk
  template:
    metadata:
      labels:
        app: ch-gov-uk
    spec:
      containers:
        -   name: ch-gov-uk
            image: ch.gov.uk:1.0.0
            ports:
              - containerPort: 2000
