kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ch-gov-uk
spec:
  selector:
    app: ch-gov-uk
  ports:
    - protocol: TCP
      port: 2000
